02 writing csv file

--- a/01_intro.ipynb
+++ b/01_intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cf44a4ba",
+   "id": "078d8c4a",
    "metadata": {},
    "source": [
     "# 1.0 Introduction to Data Science"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e7e9a0f",
+   "id": "770708cf",
    "metadata": {},
    "source": [
     "https://www.youtube.com/watch?v=5GkCFnFjW8g&list=PLQ_d1GJlYMueDrv32EEcrxfboirHHjjsh&index=3&ab_channel=PraveenKumar"
@@ -19,7 +19,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "212ed4da",
+   "id": "baa4a837",
    "metadata": {},
    "source": [
     "## What is Data Science "
@@ -32,7 +32,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "e35d3971",
+   "id": "de51cc3b",
    "metadata": {},
    "source": [
     "**Data Science** is a concept that unifies Statistics, Computer Science and Business Domain.\n",
@@ -55,7 +55,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "ec9e7338",
+   "id": "2239986a",
    "metadata": {},
    "source": [
     "## Machine Learning Project Lifecycle"
@@ -68,7 +68,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "71cb92f7",
+   "id": "f5d0ae88",
    "metadata": {},
    "source": [
     "![Screen%20Shot%202022-11-15%20at%203.05.09%20PM.png](attachment:Screen%20Shot%202022-11-15%20at%203.05.09%20PM.png)"
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bb01988",
+   "id": "5ab89840",
    "metadata": {},
    "source": [
     "## What are the activities of a Data Scientist?\n",
@@ -85,18 +85,12 @@
     "- Work with stakeholders in leveraging business data to achieve profitable / optimal solutions.\n",
     "- Mine and analyse data from databases to optimise product development, marketing techniques and business strategies.\n",
     "- Assess the effectiveness and accuracy of new data sources and data gathering techniques.\n",
-    "- Work on Machine"
+    "- Work on Machine Learning programs using languages like Python, R and frameworks like Keras, Tensorflow."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7fadb7dc",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "608f297c",
+   "id": "71f3a321",
    "metadata": {},
    "source": [
     "***Thank you for going through this projet. Your comments are more then welcome to ybezginova2021@gmail.com***\n",
