--- a/03_Scatterplot-bar-pie-charts-subplots.ipynb
+++ b/03_Scatterplot-bar-pie-charts-subplots.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e67845b",
+   "id": "e8cc8409",
    "metadata": {},
    "source": [
     "# Scatter Plot"
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "db250630",
+   "id": "ef42ce91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "ae7c57f9",
+   "id": "503a5932",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1893208a",
+   "id": "c68edf8a",
    "metadata": {},
    "source": [
     "## Area or Stack Plot"
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ef49b593",
+   "id": "a81aeb44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "47785783",
+   "id": "9ee6636f",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91d30119",
+   "id": "d56fb545",
    "metadata": {},
    "source": [
     "## Pie Chart"
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4e15dbce",
+   "id": "b1a4775b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "7b850e60",
+   "id": "eaf0a882",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ebbca54",
+   "id": "bb96d75b",
    "metadata": {},
    "source": [
     "## How to deal with multiple plots"
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "07a99410",
+   "id": "7031ae39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "c12b93f2",
+   "id": "95db2c19",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
    "id": "58f147a4",
    "metadata": {},
    "source": [
-    "***Thank you for going through this projet. Your comments are more then welcome to ybezginova2021@gmail.com***\n",
+    "***Thank you for going through this project. Your comments are more then welcome to ybezginova2021@gmail.com***\n",
     "\n",
     "***Best wishes,***\n",
     "\n",
